--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "www.taminomartinius.de",
+  "name": "www.pd.infn.it/~pertoldi",
   "private": true,
   "scripts": {
     "watch": "scripts/watch.sh",
@@ -13,6 +13,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
+    "eslint-config-google": "^0.9.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "offline-plugin": "^4.9.0",
@@ -30,6 +31,7 @@
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
+    "npm": "^6.0.0",
     "vue": "^2.5.13"
   }
 }
