--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-
+      - name: Use Node.js 8.19.2
+        uses: actions/setup-node@v3
+        with:
+          node-version: 8.19.2
       - name: Install and Build 🔧
         run: |
           npm install
           npm run build
-
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
