--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - name: Use Node.js 8.19.2
+      - name: Use Node.js 8
         uses: actions/setup-node@v3
         with:
-          node-version: 8.19.2
+          node-version: 8.x
       - name: Install and Build 🔧
         run: |
           npm install
